--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,15 @@
 ---
 title: "Milano Air Quality Dashboard"
+format:
+  html: 
+    theme:
+      - default
+    #  - style/custom.scss
+    page-layout: custom
+    margin-left: 10px
+    margin-top: 10px
+    margin-right: 30px
+    margin-bottom: 10px
 editor_options: 
   chunk_output_type: console
 ---
@@ -12,7 +22,7 @@ editor_options:
 ```
 
 <!--- js dependencies -->
-<script src="time-series-dot.js"></script> 
+<script src="js/time-series-dot.js"></script> 
 <script src="https://d3js.org/d3.v7.min.js"></script> 
 
 ```{r rpackages}
@@ -24,7 +34,14 @@ library(lubridate)
 library(janitor)
 ```
 
-```{r, pollutants}
+
+```{js}
+//| echo: false
+var height = 450
+```
+
+
+```{r pollutants}
 #| include: false
 # from https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en
 pollutants <- 
@@ -39,7 +56,7 @@ pollutants <-
           )
 ```
 
-```{r}
+```{r get-clean-data}
 #| include: false
 air_q_url <-
   'data/aq.csv'
@@ -65,7 +82,21 @@ ozone <-
 ojs_define(ozone_in = ozone)
 ```
 
-```{ojs}
+:::::: {.grid}
+
+::::: {.g-col-12 .g-col-xl-8}
+
+::: {.g-col-12}
+
+:::
+
+:::: {.g-col-12}
+
+::: {.panel-tabset}
+
+# Ozone
+
+```{ojs scatterplot}
 //| echo: false
 ozone = transpose(ozone_in)
 
@@ -77,7 +108,18 @@ chart = Scatterplot(ozone, {
   yLabel: "↑ Horsepower",
   stroke: "steelblue",
   width,
-  height: 600
+  height: height
 })
 ```
 
+:::
+
+::::
+
+:::::
+
+::::: {.g-col-12 .g-col-xl-4}
+
+:::::
+
+::::::
