--- a/index.qmd
+++ b/index.qmd
@@ -100,7 +100,8 @@ ozone = transpose(ozone_in)
 heatmap(ozone, {
   x: d => Date.parse(d.date)    ,
   y: d => d.valore,
-  fill: d => d.valore, 
+  fill: d => d.valore,
+  r: 10,
   xType: d3.scaleTime,
   xLabel: "Days →",
   yLabel: "↑ Concentration [µg/m3]",
@@ -109,6 +110,32 @@ heatmap(ozone, {
   height: height,
   columnsRatio: 8/12,
 })
+```
+
+:::
+
+::: {.g-col-12}
+
+```{ojs}
+import { ramp } from "@mbostock/color-ramp"
+range = d3.range(domain.length).map((i) => i / (domain.length - 1)) // fake range
+color = d3.interpolateWarm
+```
+
+```{ojs}
+viewof first = Inputs.range([0, .5], {label: "first", value: .1, step: 0.01})
+viewof last = Inputs.range([.5, 1], {label: "last", value: .9, step: 0.01})
+```
+
+
+```{ojs}
+domain = [0, first, last, 1]
+scale = d3
+  .scaleLinear()
+  .domain(domain)
+  .range(range)
+  .interpolate((i, j) => (t) => color(i + t * (j - i)))
+ramp(scale)
 ```
 
 :::
