--- a/index.qmd
+++ b/index.qmd
@@ -129,20 +129,10 @@ air_q_list <-
               .names = .$inquinante)
   }
 
-
-ozone <- 
-  air_q %>% 
-  filter(inquinante == 'O3') %>% 
-  drop_na()
-
 ojs_define(
   all_scaled_in = air_q_scaled,
   air_q_list = air_q_list
   )
-```
-
-```{r data-to-js}
-# df_to_js(air_q_list)
 ```
 
 
@@ -211,9 +201,76 @@ heatmap(allScaledFiltered, {
 
 ::: {.panel-tabset}
 
+### Cyclic aromatics
+
+```{ojs c6h6}
+//| echo: false
+Scatterplot(air_q_list.C6H6, {
+  x: d => d.date*24*60*60*1000,
+  y: d => d.valore, 
+  xSmooth: d => d.date*24*60*60*1000,
+  yLow95: d => d.low_95,
+  yHigh95: d => d.high_95,
+  start: start,
+  end: end,
+  xType: d3.scaleTime,
+  xLabel: "Days →",
+  yLabel: "↑ Concentration [µg/m3]",
+  stroke: "steelblue",
+  width,
+  height: height,
+  columnsRatio: 8/12,
+})    
+```
+
+### Carbon Monoxide
+
+```{ojs co}
+//| echo: false
+Scatterplot(air_q_list.CO, {
+  x: d => d.date*24*60*60*1000,
+  y: d => d.valore, 
+  xSmooth: d => d.date*24*60*60*1000,
+  yLow95: d => d.low_95,
+  yHigh95: d => d.high_95,
+  start: start,
+  end: end,
+  xType: d3.scaleTime,
+  xLabel: "Days →",
+  yLabel: "↑ Concentration [µg/m3]",
+  stroke: "steelblue",
+  width,
+  height: height,
+  columnsRatio: 8/12,
+})    
+```
+
+
+### Nitrogen Dioxide
+
+```{ojs no2}
+//| echo: false
+Scatterplot(air_q_list.NO2, {
+  x: d => d.date*24*60*60*1000,
+  y: d => d.valore,
+  xSmooth: d => d.date*24*60*60*1000,
+  yLow95: d => d.low_95,
+  yHigh95: d => d.high_95,
+  start: start,
+  end: end,
+  xType: d3.scaleTime,
+  xLabel: "Days →",
+  yLabel: "↑ Concentration [µg/m3]",
+  stroke: "steelblue",
+  width,
+  height: height,
+  columnsRatio: 8/12,
+})    
+```
+
 ### Ozone
 
-```{ojs scatterplot}
+```{ojs ozone}
 //| echo: false
 Scatterplot(air_q_list.O3, {
   x: d => d.date*24*60*60*1000,
@@ -232,6 +289,73 @@ Scatterplot(air_q_list.O3, {
   columnsRatio: 8/12,
 })    
 ```
+
+### PM10
+
+```{ojs pm10}
+//| echo: false
+Scatterplot(air_q_list.PM10, {
+  x: d => d.date*24*60*60*1000,
+  y: d => d.valore, 
+  xSmooth: d => d.date*24*60*60*1000,
+  yLow95: d => d.low_95,
+  yHigh95: d => d.high_95,
+  start: start,
+  end: end,
+  xType: d3.scaleTime,
+  xLabel: "Days →",
+  yLabel: "↑ Concentration [µg/m3]",
+  stroke: "steelblue",
+  width,
+  height: height,
+  columnsRatio: 8/12,
+})    
+```
+
+### PM2.5
+
+```{ojs pm25}
+//| echo: false
+Scatterplot(air_q_list.PM25, {
+  x: d => d.date*24*60*60*1000,
+  y: d => d.valore, 
+  xSmooth: d => d.date*24*60*60*1000,
+  yLow95: d => d.low_95,
+  yHigh95: d => d.high_95,
+  start: start,
+  end: end,
+  xType: d3.scaleTime,
+  xLabel: "Days →",
+  yLabel: "↑ Concentration [µg/m3]",
+  stroke: "steelblue",
+  width,
+  height: height,
+  columnsRatio: 8/12,
+})    
+```
+
+### Sulphur Dioxide
+
+```{ojs so2}
+//| echo: false
+Scatterplot(air_q_list.SO2, {
+  x: d => d.date*24*60*60*1000,
+  y: d => d.valore, 
+  xSmooth: d => d.date*24*60*60*1000,
+  yLow95: d => d.low_95,
+  yHigh95: d => d.high_95,
+  start: start,
+  end: end,
+  xType: d3.scaleTime,
+  xLabel: "Days →",
+  yLabel: "↑ Concentration [µg/m3]",
+  stroke: "steelblue",
+  width,
+  height: height,
+  columnsRatio: 8/12,
+})    
+```
+
 
 :::
 
