--- a/index.qmd
+++ b/index.qmd
@@ -25,6 +25,7 @@ editor_options:
 <script src="js/time-series-dot.js"></script>
 <script src="js/heatmap.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 
 ```{r rpackages}
 #| include: false
