--- a/index.qmd
+++ b/index.qmd
@@ -146,6 +146,15 @@ ojs_define(
 var height = 350
 ```
 
+```{ojs palette}
+tokyo = FileAttachment('data/tokyo-palette.json').json()
+```
+
+```{ojs}
+tokyo
+```
+
+
 ```{ojs}
 max_over_limits
 ```
@@ -222,7 +231,9 @@ Scatterplot(air_q_list.C6H6, {
   yHigh95: d => d.high_95,
   start: start,
   end: end,
-  fillDomain: [0, 1, max_over_limits],
+  fillRange: [0, 1],
+  fillDomain: [0, max_over_limits],
+  palette: tokyo.reverse(),
   xType: d3.scaleTime,
   xLabel: "Days →",
   yLabel: "↑ Concentration [µg/m3]",
