scientific palette in heatmap

--- a/index.qmd
+++ b/index.qmd
@@ -201,6 +201,9 @@ heatmap(allScaledFiltered, {
   y: d => d.inquinante,
   fill: d => d.scaled,
   xType: d3.scaleTime,
+  fillPalette: tokyo_rev,
+  fillDomain: [0, 1, max_over_limits],
+  fillRange: [0, 0.5, 1],
   xLabel: "Days →",
   width,
   targetLimit: 1,
