--- a/index.qmd
+++ b/index.qmd
@@ -1,17 +1,9 @@
 ---
-title: "Milano Air Quality Dashboard"
-format:
-  html: 
-    theme: default
-    css: style/style.css
-    page-layout: custom 
-    margin-left: 10px
-    margin-top: 10px 
-    margin-right: 30px
-    margin-bottom: 10px
 editor_options: 
   chunk_output_type: console
 ---
+
+
 
 ```{r notes}
 #| include: false
@@ -37,6 +29,7 @@ library(broom)
 ```
 
 ```{r utils}
+#| include: false
 source(
   here(
     'R/utils.R'
@@ -45,6 +38,7 @@ source(
 ```
 
 ```{r params}
+#| include: false
 loess_span <- .2
 ```
 
@@ -141,32 +135,33 @@ ojs_define(
   )
 ```
 
-```{js params-js}
+```{ojs params-js}
+//| include: false
 //| echo: false
-var height = 350
+height = 350
 ```
 
-```{ojs palette}
+```{ojs pre-comp}
+//| include: false
+//| output: false
 tokyo = FileAttachment('data/tokyo-palette.json').json()
 tokyo_rev = tokyo.slice().reverse()  
-```
-
-
-```{ojs}
-//| output: false
 all_scaled_in.date = all_scaled_in.date.map(x => Date.parse(x))
-```
-
-```{ojs data}
-//| echo: false
 allScaled = transpose(all_scaled_in)
-```
-
-```{ojs dates}
 getDates = d => d.date
-
 allDates = d3.map(allScaled, getDates)
 ```
+
+:::::: {.grid}
+::::: {.g-col-12 .g-col-xl-4}
+
+This dashboard represents the air quality in the city of Milan, Italy, stating from open data measurements of pollutants concentration.
+
+The measurements come from the [Open Data Portal](https://dati.comune.milano.it/dataset/ds411-rilevazione-qualita-aria-2022) of the city of Milan. After featching those measurements, I'm making minor fixes to the measurement units of *policyclic aromatic compounds* which are reported at concentrations 1000 times higher than the expected range, and of *carbon monoxide*, which is reported at concentrations 1000 smaller than the expected range.
+
+All measurements are compared to European target limits, which [are documented  here](https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en). I choose to use the most stringent limits reported.
+
+Air pollutant in Milano are often above target limits.
 
 ```{ojs inputs-start}
 viewof start = Inputs.date({label: "Start date",
@@ -188,11 +183,11 @@ allScaledFiltered = allScaled.filter((i) => {
 })
 ```
 
-:::::: {.grid}
+:::::
 
 ::::: {.g-col-12 .g-col-xl-8}
 
-::: {.g-col-12}
+:::: {.g-col-12}
 
 ```{ojs heatmap}
 //| echo: false
@@ -212,9 +207,7 @@ heatmap(allScaledFiltered, {
 })
 ```
 
-:::
-
-:::: {.g-col-12}
+::::
 
 ```{ojs scatter-params}
 scatter_params = {
@@ -238,6 +231,7 @@ scatter_params = {
 }
 ```
 
+:::: {.g-col-12}
 
 ::: {.panel-tabset}
 
@@ -297,10 +291,6 @@ Scatterplot(air_q_list.SO2, scatter_params)
 :::
 
 ::::
-
-:::::
-
-::::: {.g-col-12 .g-col-xl-4}
 
 :::::
 
