--- a/index.qmd
+++ b/index.qmd
@@ -188,6 +188,10 @@ allScaledFiltered = allScaled.filter((i) => {
 tableDays(allScaledFiltered)
 ```
 
+Electric cars are [no solution](https://theconversation.com/cycling-is-ten-times-more-important-than-electric-cars-for-reaching-net-zero-cities-157163) to this issue.
+
+This dashboard was made and is maintained by [Otho Mantegazza](https://www.linkedin.com/in/otho-mantegazza/), feel free to contact me for any question or suggestion. You can find the [source code on Github](https://github.com/othomantegazza/milano-air-quality).
+
 :::::
 
 ::::: {.g-col-12 .g-col-xl-8}
