--- a/index.qmd
+++ b/index.qmd
@@ -172,9 +172,9 @@ viewof end = Inputs.date({label: "End date",
 
 This dashboard displays the air quality in the city of Milano, Italy.
 
-All measurements come from the [Open Data Portal](https://dati.comune.milano.it/dataset/ds411-rilevazione-qualita-aria-2022) of the city of Milan, with minor fixes to the measurement units of **policyclic aromatic compounds**, reported at concentrations 1000 times higher than the expected range, and of **carbon monoxide**, reported at concentrations 1000 smaller than the expected range.
+All measurements come from the [Open Data Portal](https://dati.comune.milano.it/dataset/ds411-rilevazione-qualita-aria-2022) of the city of Milan, with minor fixes to the measurement units of *policyclic aromatic compounds*, reported at concentrations 1000 times higher than the expected range, and of *carbon monoxide*, reported at concentrations 1000 smaller than the expected range.
 
-Besides displaying raw measurements of air pollutants concentration, this dashboards displays percentages of [EU target limits, as documented  here](https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en). I choose to use the most stringent limits reported.
+Besides displaying **raw measurements** of air pollutants concentration, this dashboards displays **percentages** of [EU target limits, as documented  here](https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en). I choose to use the most stringent limits reported.
 
 Air pollutant in Milano are often above target limits.
 
