--- a/index.qmd
+++ b/index.qmd
@@ -59,17 +59,30 @@ pollutants <-
 
 ```{r get-clean-data}
 #| include: false
-air_q_url <-
-  'data/aq.csv'
 
-# read the data and do main cleaning
+air_q_url_2022 <-
+  'https://dati.comune.milano.it/dataset/f6d5e0c0-3cef-4a63-b038-6684c8dca88d/resource/e1cc82ec-97bb-463c-a3fb-b61be60f0956/download/qaria_datoariagiornostazione_2022-11-22.csv'
+
+air_q_url_2023 <-
+  'https://dati.comune.milano.it/dataset/405ae1cd-0687-4449-baf2-6c9d993ed176/resource/d81b5f7d-20b8-4e3e-95cf-fbe3459dc1d2/download/qaria_datoariagiornostazione_2023-01-14.csv'
+
+air_q_2022 <- 
+  air_q_url_2022 %>% 
+  readr::read_delim(delim = ';')
+
+air_q_2023 <- 
+  air_q_url_2023 %>% 
+  readr::read_delim(delim = ';')
+
+
 air_q <- 
-  air_q_url %>% 
-  readr::read_delim(delim = ',') %>% 
+  bind_rows(
+    air_q_2022,
+    air_q_2023,
+  )%>% 
   janitor::clean_names() %>% 
   rename(date = data) %>% 
   mutate(date = date %>% as_date()) %>% 
-  select(-id) %>% 
   mutate(
     across(
       .cols = inquinante,
@@ -137,7 +150,7 @@ ojs_define(
 ```{ojs params-js}
 //| include: false
 //| echo: false
-height = 350
+height = 370
 ```
 
 ```{ojs pre-comp}
@@ -176,8 +189,6 @@ All measurements come from the [Open Data Portal](https://dati.comune.milano.it/
 
 Besides displaying **raw measurements** of air pollutants concentration, this dashboards displays **percentages** of [EU target limits, as documented  here](https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en). I choose to use the most stringent limits reported.
 
-Air pollutant in Milano are often above target limits.
-
 ```{ojs filter-data}
 allScaledFiltered = allScaled.filter((i) => {
     return (i.date >= start & i.date <= end) 
@@ -187,10 +198,6 @@ allScaledFiltered = allScaled.filter((i) => {
 ```{ojs}
 tableDays(allScaledFiltered)
 ```
-
-Electric cars are [no solution](https://theconversation.com/cycling-is-ten-times-more-important-than-electric-cars-for-reaching-net-zero-cities-157163) to this issue.
-
-This dashboard was made and is maintained by [Otho Mantegazza](https://www.linkedin.com/in/otho-mantegazza/), feel free to contact me for any question or suggestion. You can find the [source code on Github](https://github.com/othomantegazza/milano-air-quality).
 
 :::::
 
@@ -304,3 +311,6 @@ Scatterplot(air_q_list.SO2, scatter_params)
 :::::
 
 ::::::
+
+
+This dashboard was made and is maintained by [Otho Mantegazza](https://www.linkedin.com/in/otho-mantegazza/), feel free to contact me for any question or suggestion. You can find the [source code on Github](https://github.com/othomantegazza/milano-air-quality).
