--- a/index.qmd
+++ b/index.qmd
@@ -169,25 +169,26 @@ allDates = d3.map(allScaled, getDates)
 
 # Milano Air Quality
 
+This dashboard displays the air quality in the city of Milano, Italy.
+
+All measurements come from the [Open Data Portal](https://dati.comune.milano.it/dataset/ds411-rilevazione-qualita-aria-2022) of the city of Milan, with minor fixes to the measurement units of *policyclic aromatic compounds*, reported at concentrations 1000 times higher than the expected range, and of *carbon monoxide*, reported at concentrations 1000 smaller than the expected range.
+
+Besides displaying **raw measurements** of air pollutants concentration, this dashboards displays **percentages** of [EU target limits, as documented  here](https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en). I choose to use the tightest limits reported.
+
+
 ```{ojs inputs-start}
-viewof start = Inputs.date({label: "Start date",
+viewof start = Inputs.date({label: "Start date →",
                             value: d3.min(allDates),
                             min: d3.min(allDates),
                             max: d3.max(allDates)})
 ```
 
 ```{ojs inputs-end}
-viewof end = Inputs.date({label: "End date",
+viewof end = Inputs.date({label: "End date →",
                             value: d3.max(allDates),
                             min: start,
                             max: d3.max(allDates)})   
 ```
-
-This dashboard displays the air quality in the city of Milano, Italy.
-
-All measurements come from the [Open Data Portal](https://dati.comune.milano.it/dataset/ds411-rilevazione-qualita-aria-2022) of the city of Milan, with minor fixes to the measurement units of *policyclic aromatic compounds*, reported at concentrations 1000 times higher than the expected range, and of *carbon monoxide*, reported at concentrations 1000 smaller than the expected range.
-
-Besides displaying **raw measurements** of air pollutants concentration, this dashboards displays **percentages** of [EU target limits, as documented  here](https://environment.ec.europa.eu/topics/air/air-quality/eu-air-quality-standards_en). I choose to use the most stringent limits reported.
 
 ```{ojs filter-data}
 allScaledFiltered = allScaled.filter((i) => {
