--- a/index.qmd
+++ b/index.qmd
@@ -60,25 +60,24 @@ pollutants <-
 ```{r get-clean-data}
 #| include: false
 
-air_q_url_2022 <-
-  'https://dati.comune.milano.it/dataset/f6d5e0c0-3cef-4a63-b038-6684c8dca88d/resource/e1cc82ec-97bb-463c-a3fb-b61be60f0956/download/qaria_datoariagiornostazione_2022-11-22.csv'
-
 air_q_url_2023 <-
-  'https://dati.comune.milano.it/dataset/405ae1cd-0687-4449-baf2-6c9d993ed176/resource/d81b5f7d-20b8-4e3e-95cf-fbe3459dc1d2/download/qaria_datoariagiornostazione_2023-01-14.csv'
+    'https://dati.comune.milano.it/dataset/405ae1cd-0687-4449-baf2-6c9d993ed176/resource/d81b5f7d-20b8-4e3e-95cf-fbe3459dc1d2/download/qaria_datoariagiornostazione_2023-01-14.csv'
 
-air_q_2022 <- 
-  air_q_url_2022 %>% 
-  readr::read_delim(delim = ';')
+air_q_url_2024 <- 'https://dati.comune.milano.it/dataset/dba6b6ff-792b-471d-9a2c-a625f1398f5f/resource/1fb5966e-4d73-4d41-8e1a-4f9a36d6dab2/download/qaria_datoariagiornostazione_2024-01-27.csv'
 
 air_q_2023 <- 
   air_q_url_2023 %>% 
   readr::read_delim(delim = ';')
 
+air_q_2024 <- 
+  air_q_url_2024 %>% 
+  readr::read_delim(delim = ';')
+
 
 air_q <- 
   bind_rows(
-    air_q_2022,
     air_q_2023,
+    air_q_2024
   )%>% 
   janitor::clean_names() %>% 
   rename(date = data) %>% 
